{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 62,
  "lineage": "46884341-a4fa-eb11-3cf6-45ed771f4bef",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_db_ingress_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to communicate with RDS database",
            "from_port": 5432,
            "id": "sgrule-1067747841",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ca86ad62dcaf4047",
            "security_group_rule_id": "sgr-0818ccb5b2316373a",
            "self": false,
            "source_security_group_id": "sg-071dc397376899937",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.network.aws_security_group.rds_db_sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:987806625412:security-group/sg-071dc397376899937",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-071dc397376899937",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00f8f737456dfa2e1"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "upyogaws20240222090540674100000015",
            "name_prefix": "upyogaws",
            "owner_id": "987806625412",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "upyogaws",
              "Name": "upyogaws-eks_cluster_sg",
              "kubernetes.io/cluster/upyogaws": "owned"
            },
            "tags_all": {
              "KubernetesCluster": "upyogaws",
              "Name": "upyogaws-eks_cluster_sg",
              "kubernetes.io/cluster/upyogaws": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d8ccb2d5fd4ee8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:987806625412:security-group/sg-00f8f737456dfa2e1",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00f8f737456dfa2e1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-071dc397376899937"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow workers pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-071dc397376899937"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "upyogaws20240222090540675900000016",
            "name_prefix": "upyogaws",
            "owner_id": "987806625412",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "upyogaws",
              "Name": "upyogaws-eks_worker_sg",
              "kubernetes.io/cluster/upyogaws": "owned"
            },
            "tags_all": {
              "KubernetesCluster": "upyogaws",
              "Name": "upyogaws-eks_worker_sg",
              "kubernetes.io/cluster/upyogaws": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d8ccb2d5fd4ee8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-1540529526",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-071dc397376899937",
            "security_group_rule_id": "sgr-09352fe527bbdd2ba",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-3297643757",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-071dc397376899937",
            "security_group_rule_id": "sgr-0da17fd5505175d38",
            "self": false,
            "source_security_group_id": "sg-00f8f737456dfa2e1",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_primary_ingress_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_private_access_cidrs_source",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_private_access_sg_source",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-2938191746",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00f8f737456dfa2e1",
            "security_group_rule_id": "sgr-0a0fb4ca31b515911",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-2631420870",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00f8f737456dfa2e1",
            "security_group_rule_id": "sgr-03b9a8e1391b15a9d",
            "self": false,
            "source_security_group_id": "sg-071dc397376899937",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-250500521",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00f8f737456dfa2e1",
            "security_group_rule_id": "sgr-0d74d2a8b2056e24e",
            "self": false,
            "source_security_group_id": "sg-071dc397376899937",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_kubelet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-1579476977",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00f8f737456dfa2e1",
            "security_group_rule_id": "sgr-057446846185be14e",
            "self": false,
            "source_security_group_id": "sg-00f8f737456dfa2e1",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-058c5645be454b133",
            "association_id": "eipassoc-052646bef109c1331",
            "domain": "vpc",
            "id": "eipalloc-058c5645be454b133",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-02d324a2f619b6398",
            "private_dns": "ip-192-168-0-151.ap-south-1.compute.internal",
            "private_ip": "192.168.0.151",
            "public_dns": "ec2-3-111-77-24.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.111.77.24",
            "public_ipv4_pool": "amazon",
            "tags": {
              "KubernetesCluster": "upyogaws",
              "Name": "eip-upyogaws",
              "kubernetes.io/cluster/upyogaws": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "upyogaws",
              "Name": "eip-upyogaws",
              "kubernetes.io/cluster/upyogaws": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:987806625412:internet-gateway/igw-0920e046d33d3055d",
            "id": "igw-0920e046d33d3055d",
            "owner_id": "987806625412",
            "tags": {
              "KubernetesCluster": "upyogaws",
              "Name": "upyogaws",
              "kubernetes.io/cluster/upyogaws": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "upyogaws",
              "Name": "upyogaws",
              "kubernetes.io/cluster/upyogaws": "shared"
            },
            "vpc_id": "vpc-02d8ccb2d5fd4ee8e"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-058c5645be454b133",
            "association_id": "eipassoc-052646bef109c1331",
            "connectivity_type": "public",
            "id": "nat-06b316035c4ac5e8b",
            "network_interface_id": "eni-02d324a2f619b6398",
            "private_ip": "192.168.0.151",
            "public_ip": "3.111.77.24",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0274fd49cf865430f",
            "tags": {
              "KubernetesCluster": "upyogaws",
              "Name": "nat-gw-upyogaws",
              "kubernetes.io/cluster/upyogaws": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "upyogaws",
              "Name": "nat-gw-upyogaws",
              "kubernetes.io/cluster/upyogaws": "shared"
            }
          },
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:987806625412:route-table/rtb-0c7ffef32e64e1fbb",
            "id": "rtb-0c7ffef32e64e1fbb",
            "owner_id": "987806625412",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06b316035c4ac5e8b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "KubernetesCluster": "upyogaws",
              "Name": "private-upyogaws-rtb",
              "kubernetes.io/cluster/upyogaws": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "upyogaws",
              "Name": "private-upyogaws-rtb",
              "kubernetes.io/cluster/upyogaws": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d8ccb2d5fd4ee8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:987806625412:route-table/rtb-0222183ab08a6df5d",
            "id": "rtb-0222183ab08a6df5d",
            "owner_id": "987806625412",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0920e046d33d3055d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "KubernetesCluster": "upyogaws",
              "Name": "public-upyogaws-rtb",
              "kubernetes.io/cluster/upyogaws": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "upyogaws",
              "Name": "public-upyogaws-rtb",
              "kubernetes.io/cluster/upyogaws": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d8ccb2d5fd4ee8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01452c925b3a992aa",
            "route_table_id": "rtb-0c7ffef32e64e1fbb",
            "subnet_id": "subnet-05db5c591fd45ed54"
          },
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a3a544c3af7a103",
            "route_table_id": "rtb-0c7ffef32e64e1fbb",
            "subnet_id": "subnet-0d6642a7f18e49bed"
          },
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023bcb599e718f99c",
            "route_table_id": "rtb-0222183ab08a6df5d",
            "subnet_id": "subnet-0274fd49cf865430f"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0215914e324a73a8e",
            "route_table_id": "rtb-0222183ab08a6df5d",
            "subnet_id": "subnet-09dc2fdb71200bf2e"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:987806625412:security-group/sg-0ca86ad62dcaf4047",
            "description": "RDS Database security group",
            "egress": [],
            "id": "sg-0ca86ad62dcaf4047",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow worker nodes to communicate with RDS database",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-071dc397376899937"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "db-upyogaws",
            "name_prefix": "",
            "owner_id": "987806625412",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-upyogaws"
            },
            "tags_all": {
              "Name": "db-upyogaws"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d8ccb2d5fd4ee8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:987806625412:subnet/subnet-05db5c591fd45ed54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05db5c591fd45ed54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "987806625412",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "KubernetesCluster": "upyogaws",
              "Name": "ap-south-1b-upyogaws",
              "SubnetType": "Private",
              "kubernetes.io/cluster/upyogaws": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "KubernetesCluster": "upyogaws",
              "Name": "ap-south-1b-upyogaws",
              "SubnetType": "Private",
              "kubernetes.io/cluster/upyogaws": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02d8ccb2d5fd4ee8e"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:987806625412:subnet/subnet-0d6642a7f18e49bed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6642a7f18e49bed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "987806625412",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "KubernetesCluster": "upyogaws",
              "Name": "ap-south-1a-upyogaws",
              "SubnetType": "Private",
              "kubernetes.io/cluster/upyogaws": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "KubernetesCluster": "upyogaws",
              "Name": "ap-south-1a-upyogaws",
              "SubnetType": "Private",
              "kubernetes.io/cluster/upyogaws": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02d8ccb2d5fd4ee8e"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:987806625412:subnet/subnet-0274fd49cf865430f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.0.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0274fd49cf865430f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "987806625412",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "KubernetesCluster": "upyogaws",
              "Name": "utility-ap-south-1b-upyogaws",
              "SubnetType": "Utility",
              "kubernetes.io/cluster/upyogaws": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "KubernetesCluster": "upyogaws",
              "Name": "utility-ap-south-1b-upyogaws",
              "SubnetType": "Utility",
              "kubernetes.io/cluster/upyogaws": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02d8ccb2d5fd4ee8e"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:987806625412:subnet/subnet-09dc2fdb71200bf2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.8.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09dc2fdb71200bf2e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "987806625412",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "KubernetesCluster": "upyogaws",
              "Name": "utility-ap-south-1a-upyogaws",
              "SubnetType": "Utility",
              "kubernetes.io/cluster/upyogaws": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "KubernetesCluster": "upyogaws",
              "Name": "utility-ap-south-1a-upyogaws",
              "SubnetType": "Utility",
              "kubernetes.io/cluster/upyogaws": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02d8ccb2d5fd4ee8e"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:987806625412:vpc/vpc-02d8ccb2d5fd4ee8e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-058edeb950b4baae6",
            "default_route_table_id": "rtb-0bdb5236d316897be",
            "default_security_group_id": "sg-059a1fc673767dd6a",
            "dhcp_options_id": "dopt-0e4f51fade7f2a4c9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02d8ccb2d5fd4ee8e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bdb5236d316897be",
            "owner_id": "987806625412",
            "tags": {
              "Name": "upyogaws",
              "kubernetes.io/cluster/upyogaws": "shared"
            },
            "tags_all": {
              "Name": "upyogaws",
              "kubernetes.io/cluster/upyogaws": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}